--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -7,11 +7,17 @@
         rgba($color-primary, 0.5)
       ),
       url(../assets/back.jpg);
+    background-size: cover;
 
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 6rem;
+    }
   }
 
   &__image--1 {
@@ -19,6 +25,11 @@
     grid-column: 2 / 6;
     grid-row: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000000, 0.1);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+    }
   }
 
   &__image--2 {
@@ -27,6 +38,11 @@
     grid-row: 4 / 6;
     z-index: 10;
     box-shadow: 0 2rem 5rem rgba(#000000, 0.2);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
 
   &__content {
@@ -38,6 +54,11 @@
     display: grid;
     align-content: center;
     justify-items: start;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
